src/test/ui/llvm-asm/llvm-asm-bad-clobber.stderr
error[E0664]: clobber should not be surrounded by braces
  --> $DIR/llvm-asm-bad-clobber.rs:22:42
   |
LL |         llvm_asm!("xor %eax, %eax" : : : "{eax}");
   |                                          ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0664`.
